--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 </head>
 <body>
-<button onclick="onGame()>Press Me!</button>
+<button onclick="onGame"()>Press Me!</button>
 <script>
 function openGame() {
 var win = window.open()
