--- a/index.html
+++ b/index.html
@@ -1,20 +1,3 @@
-<html>
-<head>
-</head>
-<body>
-<button onclick="onGame"()>Press Me!</button>
-<script>
-function openGame() {
-var win = window.open()
-var url = "https://google.com"
-car iframe = win.document.createElement('iframe')
-iframe.style.width = "100%";
-iframe.style.height = "100%";
-iframe.style.border = "none";
-iframe.src = "https://sachem.ml"
-win.document.body.appendChild(iframe)
-}
-</script>
-<script src="/assets/js/cloaker.js"></script>
-</body>
-</html>
+<HTML>
+<iframe src="https://USERNAME.github.io/RESPOSITORY" width="100%" height="400" frameborder="0" scrolling="no"></iframe>
+ <HTML>
