--- a/index.html
+++ b/index.html
@@ -1,3 +1,10 @@
-<HTML>
-<iframe src="https://USERNAME.github.io/RESPOSITORY" width="100%" height="400" frameborder="0" scrolling="no"></iframe>
- <HTML>
+<!DOCTYPE html>
+<html>
+<head>
+  <title>We Are Gaming Getway</title>
+</head>
+<body>
+  <iframe src="https://www.sachem.ml"></iframe>
+  <script src="/assets/js/cloaker.js"></script>
+</body>
+</html>
