--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <title>We Are Gaming Getway</title>
 </head>
 <body>
-  <iframe src="https://www.sachem.ml"></iframe>
+  <iframe src="https://www.sachem.ml" style="position: fixed; top: 0; left: 0; width: 100%; height: 100%;"></iframe>
   <script src="/assets/js/cloaker.js"></script>
 </body>
 </html>
