--- a/index.html
+++ b/index.html
@@ -1,10 +1,41 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>We Are Gaming Getway</title>
+  <title>Popup with Embedded Page</title>
 </head>
 <body>
-  <script src="/assets/js/cloaker.js"></script>
-  <iframe src="https://www.sachem.ml" style="position: fixed; top: 0; left: 0; width: 100%; height: 100%;"></iframe>
+  <!-- Button to trigger the popup -->
+  <button onclick="showPopup()">Show Popup</button>
+
+  <!-- Popup container -->
+  <div id="popup" style="display: none;">
+    <!-- Close button -->
+    <button onclick="hidePopup()">Close</button>
+
+    <!-- Run the cloaker.js script -->
+    <script src="/assets/js/cloaker.js"></script>
+
+    <!-- Embed the page www.sachem.ml -->
+    <iframe src="https://www.sachem.ml"></iframe>
+  </div>
+
+  <!-- Popup JavaScript -->
+  <script>
+    function showPopup() {
+      // Get the popup element
+      var popup = document.getElementById("popup");
+
+      // Show the popup
+      popup.style.display = "block";
+    }
+
+    function hidePopup() {
+      // Get the popup element
+      var popup = document.getElementById("popup");
+
+      // Hide the popup
+      popup.style.display = "none";
+    }
+  </script>
 </body>
 </html>
